# vec

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  HRAL.agda  LE.agda  Makefile  README.md  Vec.agda  cabal.haskell-ci  cabal.project  stack-9.13.yaml  stack.yaml
.github/workflows/: haskell-ci.yml
dec/: ChangeLog.md  dec.cabal
dec/src/Data/Type/: Dec.hs  NewDec.hs
fin/: ChangeLog.md  cabal.project  fin.cabal
fin/bench/: Bench.hs
fin/src/Data/: Fin.hs  Nat.hs
fin/src/Data/Fin/: Enum.hs
fin/src/Data/Type/: Dec.hs  Nat.hs
fin/src/Data/Type/Nat/: CMP.hs  LE.hs  LT.hs
fin/src/Data/Type/Nat/LE/: ReflStep.hs
fin/test/: Inspection.hs  properties.hs
ral/: ChangeLog.md  ral.cabal
ral-lens/: ChangeLog.md  LICENSE  ral-lens.cabal
ral-lens/src/Data/RAL/: Lens.hs
ral-lens/src/Data/RAL/Tree/: Lens.hs
ral-lens/src/Data/RAList/: Lens.hs
ral-lens/src/Data/RAList/NonEmpty/: Lens.hs
ral-lens/src/Data/RAVec/: Lens.hs
ral-lens/src/Data/RAVec/NonEmpty/: Lens.hs
ral-lens/src/Data/RAVec/Tree/: Lens.hs
ral-lens/src/Data/RAVec/Tree/DF/: Lens.hs
ral-optics/: ChangeLog.md  ral-optics.cabal
ral-optics/src/Data/RAL/: Optics.hs
ral-optics/src/Data/RAL/Tree/: Optics.hs
ral-optics/src/Data/RAList/: Optics.hs
ral-optics/src/Data/RAList/NonEmpty/: Optics.hs
ral-optics/src/Data/RAList/NonEmpty/Optics/: Internal.hs
ral-optics/src/Data/RAVec/: Optics.hs
ral-optics/src/Data/RAVec/NonEmpty/: Optics.hs
ral-optics/src/Data/RAVec/NonEmpty/Optics/: Internal.hs
ral-optics/src/Data/RAVec/Tree/: Optics.hs
ral-optics/src/Data/RAVec/Tree/DF/: Optics.hs
ral/bench/: Bench.hs
ral/src/Data/: HRAL.hs  HRAList.hs  RAL.hs  RAList.hs  RAVec.hs
ral/src/Data/RAL/: Pos.hs  Tree.hs
ral/src/Data/RAList/: Internal.hs  NonEmpty.hs  Tree.hs
ral/src/Data/RAList/NonEmpty/: Internal.hs
ral/src/Data/RAList/Tree/: Internal.hs
ral/src/Data/RAVec/: NonEmpty.hs  Tree.hs
ral/src/Data/RAVec/Tree/: DF.hs
tests/: tests.cabal
tests/src/: Laws.hs  ModelTest.hs  Models.hs  Tests.hs  Uniformity.hs
tests/test/: Main.hs
vec/: ChangeLog.md  LICENSE  cabal.project  vec.cabal
vec-lens/: ChangeLog.md  vec-lens.cabal
vec-lens/src/Data/Vec/DataFamily/SpineStrict/: Lens.hs
vec-lens/src/Data/Vec/Lazy/: Lens.hs
vec-lens/src/Data/Vec/Lazy/Inline/: Lens.hs
vec-lens/src/Data/Vec/Lens/: Instances.hs
vec-lens/src/Data/Vec/Pull/: Lens.hs
vec-optics/: ChangeLog.md  vec-optics.cabal
vec-optics/src/Data/Vec/DataFamily/SpineStrict/: Optics.hs
vec-optics/src/Data/Vec/Lazy/: Optics.hs
vec-optics/src/Data/Vec/Lazy/Inline/: Optics.hs
vec-optics/src/Data/Vec/Optics/: Instances.hs
vec-optics/src/Data/Vec/Pull/: Optics.hs
vec/bench/: Bench.hs  DotProduct.hs  Universe.hs
vec/src/: SafeCompat.hs
vec/src/Control/Lens/: Yocto.hs
vec/src/Data/Functor/: Confusing.hs
vec/src/Data/Vec/: Lazy.hs  Pull.hs
vec/src/Data/Vec/DataFamily/: SpineStrict.hs
vec/src/Data/Vec/DataFamily/SpineStrict/: Pigeonhole.hs
vec/src/Data/Vec/Lazy/: Inline.hs
vec/test/: Inspection.hs  Main.hs
vec/test/Inspection/DataFamily/: SpineStrict.hs
vec/test/Inspection/DataFamily/SpineStrict/: Pigeonhole.hs
