cabal-version:      2.2
name:               ral-lens
version:            0.2.1
synopsis:           Length-indexed random access lists: lens utilities.
category:           Data, Dependent Types, Singletons, Lens
description:
  This package provides [lenses](https://hackage.haskell.org/package/lens) and instances
  for data types in [ral](https://hackage.haskell.org/package/ral) package.

homepage:           https://github.com/phadej/vec
bug-reports:        https://github.com/phadej/vec/issues
license:            GPL-2.0-or-later
license-file:       LICENSE
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg.Grenrus <oleg.grenrus@iki.fi>
copyright:          (c) 2019-2021 Oleg Grenrus
build-type:         Simple
extra-source-files: ChangeLog.md
tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.2
   || ==9.10.1

source-repository head
  type:     git
  location: https://github.com/phadej/vec.git
  subdir:   ral-lens

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall -fprint-explicit-kinds
  exposed-modules:
    Data.RAList.Lens
    Data.RAList.NonEmpty.Lens
    Data.RAVec.Lens
    Data.RAVec.NonEmpty.Lens
    Data.RAVec.Tree.DF.Lens
    Data.RAVec.Tree.Lens

  build-depends:
    , base  >=4.12.0.0 && <4.21
    , bin   ^>=0.1.4
    , fin   ^>=0.3.1
    , lens  ^>=5.2.2   || ^>=5.3.2
    , ral   ^>=0.2.1

-- dump-core
--  build-depends: dump-core
--  ghc-options: -fplugin=DumpCore -fplugin-opt DumpCore:core-html
