cabal-version:      2.2
name:               ral
version:            0.1
synopsis:           Length-indexed random access lists.
category:           Data, Dependent Types, Singletons
description:
  Length indexed random access lists.
  .
  See <http://www.staff.science.uu.nl/~swier004/publications/2019-jfp-submission.pdf>

homepage:           https://github.com/phadej/vec
bug-reports:        https://github.com/phadej/vec/issues
license:            GPL-2.0-or-later
license-file:       LICENSE
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg.Grenrus <oleg.grenrus@iki.fi>
copyright:          (c) 2019 Oleg Grenrus
build-type:         Simple
extra-source-files: ChangeLog.md
tested-with:
  GHC ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.1

source-repository head
  type:     git
  location: https://github.com/phadej/vec.git
  subdir:   ral

flag adjunctions
  description: Depend on @adjunctions@ to provide its instances
  manual:      True
  default:     True

flag distributive
  description:
    Depend on @distributive@ to provide its instances. Turning on, disables @adjunctions@ too.

  manual:      True
  default:     True

flag semigroupoids
  description:
    Depend on @semigroupoids@ to provide its instances, and `traverse1`.

  manual:      True
  default:     True

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall -fprint-explicit-kinds
  exposed-modules:
    Data.RAList
    Data.RAList.NonEmpty
    Data.RAList.Tree
    Data.RAVec
    Data.RAVec.NonEmpty
    Data.RAVec.Tree

  -- GHC boot libs
  build-depends:
    , base     >=4.7     && <4.14
    , deepseq  >=1.3.0.1 && <1.5

  if !impl(ghc >=8.0)
    build-depends: semigroups >=0.18.4 && <0.20

  -- siblings
  build-depends:
    , bin  ^>=0.1
    , fin  ^>=0.1.1

  -- other dependencies
  build-depends:
    , hashable    >=1.2.7.0 && <1.4
    , QuickCheck  ^>=2.13.2

  if flag(distributive)
    build-depends: distributive >=0.5.3 && <0.7

    if flag(adjunctions)
      build-depends: adjunctions ^>=4.4

  if flag(semigroupoids)
    build-depends: semigroupoids >=5.2.2 && <5.4

-- dump-core
-- if impl(ghc >= 8.0)
--  build-depends: dump-core
--  ghc-options: -fplugin=DumpCore -fplugin-opt DumpCore:core-html
