cabal-version: 2.2
name:          tests
version:       0
synopsis:      Tests for fin and bin and ...
category:      Data, Dependent Types, Singletons, Tests
description:   Separate package for tests in vec package suite
homepage:      https://github.com/phadej/vec
bug-reports:   https://github.com/phadej/vec/issues
license:       GPL-2.0-or-later
license-file:  LICENSE
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Oleg.Grenrus <oleg.grenrus@iki.fi>
copyright:     (c) 2019 Oleg Grenrus
build-type:    Simple
tested-with:
  GHC ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.4
   || ==9.0.1
   || ==9.2.1

source-repository head
  type:     git
  location: https://github.com/phadej/vec.git
  subdir:   tests

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall -fprint-explicit-kinds
  exposed-modules:
    Laws
    Models
    ModelTest
    Tests
    Uniformity

  build-depends:
    , base        <5
    , bin
    , fin
    , QuickCheck

  build-depends:
    , containers
    , math-functions
    , tasty             ^>=1.4
    , tasty-quickcheck  ^>=0.10.1

  if !impl(ghc >=7.10)
    build-depends: nats ^>=1.1.2

test-suite all-tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  ghc-options:      -Wall -fprint-explicit-kinds -threaded -rtsopts
  main-is:          Main.hs
  build-depends:
    , base
    , tests
